Content count endpoint
